fixed social icons alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,9 +113,12 @@ main {
 }
 
 /*  FOOTER  */
-footer {
-    background-color: orange;
-
+#social-networks {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
 }
 
 /*  MEDIA QUERY: 768px & LARGER  */
